# shiren6-utils

./: Cargo.toml  LICENSE  README.md  index.html  main.js  makefile  style.css
.github/workflows/: deploy.yml
src/: bouncy_walls.rs  lib.rs
src/bouncy_walls/: cell.rs  mod.rs
src/price_list/: bracelets.csv  grasses.csv  items.rs  mod.rs  pots.csv  scrolls.csv  staves.csv
