[package]
name = "shiren6-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.91"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.68"
features = [
	"HtmlInputElement",
	"HtmlSelectElement",
	"HtmlTextAreaElement"
]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
